--- a/docs/main.tex
+++ b/docs/main.tex
@@ -66,4 +66,29 @@ a(?&consonant)e
                & \textipa{@}  & \\
     \hline
 \end{tabular}
+
+\section{Modal}
+
+{
+    \fontsize{6pt}{6pt}\selectfont
+    \begin{tabular}{|l|l|l|}
+        \hline
+        Pass & Present &  Future \\
+        \hline
+                                      & This is necessary              & \\ 
+        (+) subject + had to go       & (+) subject + must + go        & \\ 
+                                      & (+) subject + have/has to + go & \\
+        \hline
+                                      & Is this really necessary?   & \\
+        (?) Did subject have to go ?  & (?) must + subject + go + ?     & \\
+        & (?) Do/Does + subject + go  & \\
+        \hline
+        & Don't do this                          & \\
+        & (-) Subject + must not to go           & \\
+        & This isn't necessary                   & \\
+        & (-) Subject + do/does + not have to go & \\   
+        \hline
+
+    \end{tabular}
+}
 \end{document}
